--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -17,7 +17,6 @@ jobs:
       run: >-
         sudo apt install libidn2-dev g++-9;
         sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-9 9;
-        python -m pip install --user --upgrade setuptools;
     - name: Test module
       run: >-
         python setup.py test
@@ -31,11 +30,7 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: 3.8
-    - name: Install Ubuntu packages
-      run: >-
-        sudo apt install libidn2-dev g++-9;
-        sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-9 9;
-    - name: Build a binary wheel and a source tarball
+    - name: Build a source tarball
       run: >-
         python -m pip install --user --upgrade setuptools;
         python setup.py sdist;
