- implemented is_valid_domain to validate if a domain is a valid domain   The following checks are provided:   - Domain total length must not exceed 255 chars long   - Domain fields length should be in the range  1 < field < 64   - Domain field can not start or end with '-'   - Domain field chars must be alphanumeric (unicode too)   - Domain must have a valid listed TLD (according to the public suffix     list)   - Domain if IDNA encoded must be correctly encoded (checked using     libidn2) - public suffix list file was updated

--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -15,6 +15,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install Ubuntu packages
       run: >-
+        sudo apt update;
         sudo apt install libidn2-dev g++-9;
         sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-9 9;
     - name: Test module
