--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -17,6 +17,7 @@ jobs:
       run: >-
         sudo apt update;
         sudo apt install libidn2-dev g++-9;
+        sudo apt-get install libcpprest-dev;
         sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-9 9;
     - name: Test module
       run: >-
