--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -16,8 +16,7 @@ jobs:
     - name: Install Ubuntu packages
       run: >-
         sudo apt update;
-        sudo apt install libidn2-dev g++-9;
-        sudo apt-get install libcpprest-dev;
+        sudo apt install libidn2-dev g++-9 libcpprest-dev;
         sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-9 9;
     - name: Test module
       run: >-
