--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,18 +6,18 @@ jobs:
     if: github.event_name == 'push' && !startsWith(github.event.ref, 'refs/tags')
     runs-on: ubuntu-20.04
     strategy:
-      max-parallel: 4
       matrix:
-        python-version: [3.6, 3.7, 3.8, pypy3]
+        python-version: [3.6, 3.7, 3.8, 3.9, pypy3]
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v1
-      with:
-        python-version: ${{ matrix.python-version }}
-    - name: Install Ubuntu packages
-      run: >-
-        sudo apt install libidn2-dev;
-    - name: Test module
-      run: >-
-        python setup.py test
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Install Ubuntu packages
+        run: >-
+          sudo apt install libidn2-dev;
+      - name: Test
+        run: >-
+          python setup.py test
