--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include README.md
 include images/logo.png
 graft tests
-recursive-include src *.h
+recursive-include src *.h *.cpp
+recursive-include pydomainextractor *.py *.pyi
