--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,13 +1,12 @@
 name: Build
 on: [push, pull_request]
-
 jobs:
   build:
     if: github.event_name == 'push' && !startsWith(github.event.ref, 'refs/tags')
     runs-on: ubuntu-20.04
     strategy:
       matrix:
-        python-version: [3.6, 3.7, 3.8, 3.9, pypy3]
+        python-version: ['3.7', '3.8', '3.9', '3.10', 'pypy3']
     steps:
       - name: Checkout
         uses: actions/checkout@v2
