--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,22 +1,45 @@
 name: Deploy
 on:
   release:
-    types: [published]
+    types: [released]
 jobs:
   deploy:
-    runs-on: ubuntu-20.04
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ['3.7', '3.8', '3.9', '3.10']
+        os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Set up Python 3.10
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
-          python-version: '3.10'
-      - name: Build a source tarball
-        run: >-
-          python -m pip install --user --upgrade setuptools;
-          python setup.py sdist;
-      - name: Publish distribution 📦 to PyPI
-        uses: pypa/gh-action-pypi-publish@master
+          python-version: ${{ matrix.python-version }}
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
         with:
-          password: ${{ secrets.pypi_password }}
+          profile: minimal
+          toolchain: stable
+          override: true
+      - name: Publish Package
+        if: matrix.os != 'windows-latest'
+        uses: messense/maturin-action@v1
+        with:
+          maturin-version: latest
+          command: publish
+          manylinux: 2014
+          args: --username=__token__ --no-sdist --interpreter=python${{ matrix.python-version }}
+        env:
+          MATURIN_PASSWORD: ${{ secrets.pypi_password }}
+      - name: Publish Package
+        if: matrix.os == 'windows-latest'
+        uses: messense/maturin-action@v1
+        with:
+          maturin-version: latest
+          command: publish
+          manylinux: 2014
+          args: --username=__token__ --no-sdist --interpreter=python
+        env:
+          MATURIN_PASSWORD: ${{ secrets.pypi_password }}
