--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pydomainextractor"
-version = "0.11.1"
+version = "0.12.0"
 authors = ["Gal Ben David <gal@intsights.com>"]
 edition = "2021"
 description = "A blazingly fast domain extraction library written in Rust"
@@ -28,6 +28,7 @@ classifier = [
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
     "Programming Language :: Rust",
 ]
 
@@ -36,12 +37,14 @@ name = "pydomainextractor"
 crate-type = ["cdylib"]
 
 [dependencies]
-ahash = "0.7"
-idna = "0.2"
+ahash = "0.8"
+idna = "0.3"
 memchr = "2"
+arraystring = "0.3.0"
+typenum = "1"
 
 [dependencies.pyo3]
-version = "0.16.5"
+version = "0.17.3"
 features = ["extension-module"]
 
 [profile.release]
