--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,3 +1,13 @@
+[project]
+name = "pydomainextractor"
+version = "0.13.0"
+description = "A blazingly fast domain extraction library written in Rust"
+authors = ["Gal Ben David <gal@intsights.com>"]
+
+[project.urls]
+repository = "https://github.com/intsights/pydomainextractor"
+homepage = "https://github.com/intsights/pydomainextractor"
+
 [build-system]
 requires = ["maturin>=0.14,<0.15"]
 build-backend = "maturin"
@@ -59,4 +69,29 @@ addopts = [
 ]
 testpaths = [
     "tests",
+]
+
+[project.metadata]
+requires-python = ">=3.7"
+
+[project.release]
+requires-python = ">=3.7"
+
+[project.sdist]
+requires-python = ">=3.7"
+
+[project.classifiers]
+license = "License :: OSI Approved :: MIT License"
+operating-system = [
+  "MacOS",
+  "Microsoft",
+  "POSIX :: Linux",
+]
+programming-language = [
+  "Python :: 3.7",
+  "Python :: 3.8",
+  "Python :: 3.9",
+  "Python :: 3.10",
+  "Python :: 3.11",
+  "Rust",
 ]
