--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Install Cross-compilers (macOS)
         if: matrix.os == 'macos-latest'
         run: |
-          rustup target add x86_64-unknown-linux-gnu
+          rustup target add x86_64-apple-darwin
           rustup target add aarch64-apple-darwin
       - name: Publish Package
         uses: PyO3/maturin-action@v1
