--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           command: publish
-          args: --username=__token__ --interpreter=python${{ matrix.python-version }} --target=x86_64-apple-darwin
+          args: --username=__token__ --interpreter=python${{ matrix.python-version }} --target=x86_64-apple-darwin --no-sdist
         env:
           MATURIN_PASSWORD: ${{ secrets.pypi_password }}
       - name: Publish macOS (arm64) Package
@@ -58,6 +58,6 @@ jobs:
         uses: PyO3/maturin-action@v1
         with:
           command: publish
-          args: --username=__token__ --interpreter=python${{ matrix.python-version }} --target=aarch64-apple-darwin
+          args: --username=__token__ --interpreter=python${{ matrix.python-version }} --target=aarch64-apple-darwin --no-sdist
         env:
           MATURIN_PASSWORD: ${{ secrets.pypi_password }}
