--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,6 +37,9 @@ jobs:
         run: |
           rustup target add x86_64-apple-darwin
           rustup target add aarch64-apple-darwin
+      - name: Install Cross-compilers (Linux)
+        if: matrix.os == 'ubuntu-latest'
+        run: |
           rustup target add aarch64-unknown-linux-gnu
       - name: Publish Package
         uses: PyO3/maturin-action@v1
