--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -58,6 +58,10 @@ jobs:
         run: poetry run maturin develop
       - name: Test
         run: poetry run pytest -Werror tests
+      - name: Install Cross-compilers (Linux)
+        if: matrix.os == 'ubuntu-latest'
+        run: |
+          rustup target add aarch64-unknown-linux-gnu
       - name: Publish Linux (arm64) Package
         if: matrix.os == 'ubuntu-latest'
         uses: PyO3/maturin-action@v1
