--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,9 +26,10 @@ idna = "0.3"
 memchr = "2"
 arraystring = "0.3.0"
 typenum = "1"
+libc = "0.2"
 
 [dependencies.pyo3]
-version = "0.17.3"
+version = "0.20.3"
 features = ["extension-module"]
 
 [profile.release]
