--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,3 +73,12 @@ jobs:
           args: --username=__token__ --interpreter=python${{ matrix.python-version }} --target=aarch64-unknown-linux-gnu --no-sdist
         env:
           MATURIN_PASSWORD: ${{ secrets.pypi_password }}
+  dist-source:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Distribute Source
+        uses: PyO3/maturin-action@v1
+        with:
+          command: sdist
+        env:
+          MATURIN_PASSWORD: ${{ secrets.pypi_password }}
