--- a/cortex.yaml
+++ b/cortex.yaml
@@ -11,7 +11,7 @@ info:
   x-cortex-domain-parents:
   - tag: threatintel-shadow-intel
   x-cortex-groups:
-  - exposure:external-ship
+  - exposure:opensource
   - target:library
 openapi: 3.0.1
 servers:
